# spaceship-titanic

./: .deepsource.toml  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  renovate.json
.github/workflows/: ci.yml
source/: README.md  __init__.py  data_loader.py  evaluation.py  main.py  model_trainer.py  preprocessing.py
