[project]
name = "spaceship-titanic"
version = "0.1.0"
description = "My solution for spaceship-titanic competition in Kaggle"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "rmuraix" }
]
dependencies = [
    "lightgbm==3.3.5",
    "optuna==3.6.2",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "xgboost==1.7.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
